--- a/CookieClicker/index.html
+++ b/CookieClicker/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CookieClicker</title>
+    <title>milkClicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +13,11 @@
     <div class="flex-container">
     <div id="MainWindow" class="flex-child">
         <div id="counter">
-            <p style="text-align: center; font-size: 300%; "> Du har <strong><span id="Count">0</span></strong> Cookies 🍪 </p>
+            <p style="text-align: center; font-size: 300%; "> you are the reason that <strong><span id="Count">0</span></strong> Milk's have expired 🥛🤢🤮</p>
         </div>
         
         <div style="text-align:center;" >
-        <img src="https://i.pinimg.com/originals/b8/f3/c4/b8f3c40b243899e9f79145c6e35a4992.gif" id="loading" onclick="Increment()"/>
+        <img src="https://i.gifer.com/YhSD.gif" id="loading" onclick="Increment()"/>
         </div>   
     </div>
     <div id="Upgrades" class="flex-child">
